--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -23,6 +23,7 @@ $orange: #fec013;
 $grey: #787878;
 $light-grey: #474747;
 $pink: #f92672;
+$blue: #3a72c7;
 
 /* buttons decoration */
 $language-active: #fec013;
