--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,10 +11,23 @@
     margin: 0 auto;
     padding: 0;
 
+    @include desktop {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: minmax(76px, 1fr);
+    }
+
     .header {
         background-color: $darkblue-background;
         display: flex;
         flex-direction: row;
+
+        @include desktop {
+            grid-column-start: 1;
+            grid-column-end: 11;
+            grid-row-start: 1;
+            grid-row-end: 2;
+        }
 
         a {
             text-decoration: none;
@@ -98,6 +111,13 @@
         display: flex;
         justify-content: space-around;
 
+        @include desktop {
+            grid-column-start: 8;
+            grid-column-end: 11;
+            grid-row-start: 2;
+            grid-row-end: 3;
+        }
+
 
         button {
             background-color: inherit;
@@ -120,56 +140,80 @@
     }
 
     .navigation {
+
         display: flex;
         flex-direction: column;
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: $white;
-        overflow-x: hidden;
-        transition: 0.5s;
+
+        .login-mobile {
+            visibility: hidden;
+        }
 
         button {
-            background-color: transparent;
-            border: none;
-            outline: 0;
-            margin: 22px 23px 21px auto;
-            cursor: pointer;
+            visibility: hidden;
+            height: 0;
+        }
+
+        @include tablet {
+
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: $white;
+            overflow-x: hidden;
+            transition: 0.5s;
+
+            button {
+                visibility: visible;
+                background-color: transparent;
+                border: none;
+                outline: 0;
+                margin: 22px 23px 21px auto;
+                cursor: pointer;
 
 
-            img {
-                height: 18px;
-                width: auto;
+                img {
+                    height: 18px;
+                    width: auto;
+                }
+            }
+
+            .login-mobile {
+                visibility: visible;
+
+                button {
+                    font-family: ProximaNovaT;
+                    cursor: pointer;
+                }
+
+                .signup {
+                    background-color: $light-grey;
+                    color: $white;
+                    font-weight: bold;
+                    height: 38px;
+                    width: 89px;
+                    border-radius: 3px;
+                    margin-left: 22px;
+                    margin-right: 18px;
+
+                }
+
+                a {
+                    font-family: ProximaNovaT;
+                    text-decoration: none;
+                    color: $light-grey;
+                    font-weight: bold;
+                }
             }
         }
 
-        .login-mobile {
-            button {
-                font-family: ProximaNovaT;
-                cursor: pointer;
-            }
-
-            .signup {
-                background-color: $light-grey;
-                color: $white;
-                font-weight: bold;
-                height: 38px;
-                width: 89px;
-                border-radius: 3px;
-                margin-left: 22px;
-                margin-right: 18px;
-
-            }
-
-            a {
-                font-family: ProximaNovaT;
-                text-decoration: none;
-                color: $light-grey;
-                font-weight: bold;
-            }
+        @include desktop {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            grid-row-start: 2;
+            grid-row-end: 20;
         }
 
         .categories {
@@ -206,23 +250,51 @@
 
     }
 
-    h1 {
-        font-size: 52px;
-        font-family: ProximaNovaT;
-        font-weight: 100;
-        margin: 36px 0 38px 23px;
+    .introduction {
+        @include desktop {
+            grid-column-start: 3;
+            grid-column-end: 8;
+            grid-row-start: 2;
+            grid-row-end: 5;
+        }
+
+        h1 {
+            font-size: 52px;
+            font-family: ProximaNovaT;
+            font-weight: 100;
+            margin: 36px 0 38px 23px;
+        }
+
+        h2 {
+            font-family: ProximaNova-Bold;
+            color: $grey;
+            margin: 32px 0 21px 23px;
+        }
+
+        p {
+            font-family: ProximaNovaT;
+            font-size: 16px;
+            margin: 0 23px;
+        }
     }
 
-    h2 {
-        font-family: ProximaNova-Bold;
-        color: $grey;
-        margin: 32px 0 21px 23px;
+    .code_init {
+        @include desktop {
+            grid-column-start: 8;
+            grid-column-end: 11;
+            grid-row-start: 3;
+            grid-row-end: 8;
+
+        }
     }
 
-    p {
-        font-family: ProximaNovaT;
-        font-size: 16px;
-        margin: 0 23px;
+    .code_store {
+        @include desktop {
+            grid-column-start: 8;
+            grid-column-end: 11;
+            grid-row-start: 8;
+            grid-row-end: 18;
+        }
     }
 
     .examples {
@@ -232,6 +304,68 @@
         border-top: none;
         background-color: $darkblue-background;
         margin: 21px 0 30px 0;
+
+        @include tablet {
+            h5 {
+                display: none;
+            }
+
+            a {
+                display: none;
+            }
+
+            .code-result {
+                display: none;
+            }
+
+            p {
+                display: none;
+            }
+        }
+
+        @include desktop {
+            margin: -1px;
+
+            h5 {
+                display: block;
+                color: $white;
+                font-family: ProximaNova-Bold;
+                font-size: 16px;
+                margin: 35px 0 14px 30px;
+
+            }
+
+            a {
+                display: block;
+                text-decoration: none;
+                color: $blue;
+                margin-left: 30px;
+
+            }
+
+            .api {
+                color: $blue;
+                word-break: break-word;
+                white-space: pre-wrap;
+                white-space: -moz-pre-wrap;
+                white-space: -pre-wrap;
+                white-space: -o-pre-wrap;
+                word-wrap: break-word;
+            }
+
+            p {
+                display: block;
+                color: $white;
+                font-family: ProximaNova-Bold;
+                margin-left: 30px;
+                margin-right: 30px;
+            }
+
+            .code-result {
+                display: block;
+            }
+        }
+
 
         pre {
             background-color: $medblue-background;
@@ -247,6 +381,18 @@
     }
 
     .parameter {
+        @include desktop {
+            grid-column-start: 3;
+            grid-column-end: 8;
+            grid-row-start: 5;
+            grid-row-end: 13;
+            margin: 23px;
+        }
+
+        @include tablet {
+            margin: 23px;
+        }
+
         table {
             display: block;
             overflow-x: auto;
@@ -283,6 +429,19 @@
     }
 
     .result {
+        @include desktop {
+            grid-column-start: 3;
+            grid-column-end: 8;
+            grid-row-start: 13;
+            grid-row-end: 18;
+            margin: 23px;
+        }
+
+        @include tablet {
+            margin: 23px;
+
+        }
+
         table {
             margin-top: 40px;
 
