--- a/src/views/index.html
+++ b/src/views/index.html
@@ -84,7 +84,7 @@
           <button class="signup">SIGN UP</button>
           <a href="#" class="registration">Don’t have a PW Account?</a>
         </div>
-        <div class="categories" onclick="closeNav()">
+        <div class="categories">
           <h4>PAYALTO</h4>
           <ul>
             <h5 class="active">Digital Goods</h5>
