--- a/src/views/index.html
+++ b/src/views/index.html
@@ -274,8 +274,8 @@ Base.setApiType(Base.API_GOODS);
             <td>no</td>
             <td>String</td>
             <td>
-              Sample: 7633c3b060fa2ddd41283ff d4629ab40 Refer to Signature
-              Calculation.
+              Sample: 7633c3b060fa2ddd41283ff d4629ab40 
+              Refer to <span class="signature">Signature Calculation</span> .
             </td>
           </tr>
         </table>
