fixed semantic mistakes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,11 +4,11 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
+    <script defer
       type="text/javascript"
       src="http://shjs.sourceforge.net/sh_main.js"
     ></script>
-    <script
+    <script defer
       type="text/javascript"
       src="http://shjs.sourceforge.net/lang/sh_javascript.js"
     ></script>
@@ -17,10 +17,9 @@
       rel="stylesheet"
       href="http://shjs.sourceforge.net/css/sh_pablo.css"
     />
-    <title>PaymentWall</title>
-
     <link rel="stylesheet" href="../styles/main.css" />
-    <script src="../js/main.js"></script>
+    <script defer src="../js/main.js"></script>
+    <title>PaymentWall</title>
   </head>
   <body onload="sh_highlightDocument();">
     <div class="container">
